k8s/namespaces/overlays/staging/patch.virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: observability
spec:
  hosts:
    - 'grafana.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth
  namespace: network
spec:
  hosts:
    - 'auth.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: network
spec:
  hosts:
    - 'dex.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sealed-secrets
  namespace: kube-system
spec:
  hosts:
    - 'sealed-secrets.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thanos
  namespace: observability
spec:
  hosts:
    - 'thanos.stg.raspbernetes.com'
# TODO: Disabled currently
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: kiali
#   namespace: observability
# spec:
#   hosts:
#     - "kiali.stg.raspbernetes.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: receiver
  namespace: flux-system
spec:
  hosts:
    - 'receiver.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - 'jaeger.stg.raspbernetes.com'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hosts:
    - 'hubble.stg.raspbernetes.com'
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: prometheus
#   namespace: observability
# spec:
#   hosts:
#     - 'prometheus.stg.raspbernetes.com'
---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: alert-manager
#   namespace: observability
# spec:
#   hosts:
#     - 'alert-manager.stg.raspbernetes.com'
